--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "nuke": "rm -rf node_modules"
+  },
   "dependencies": {
     "expo": "~40.0.0",
     "react": "16.13.1",
@@ -12,6 +15,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.14.0",
     "typescript": "~4.0.0",
     "vscode-project-react-native": "^0.2.0"
