--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.14.0",
+    "eslint-config-react-native-bk": "^0.1.0",
     "typescript": "~4.0.0",
     "vscode-project-react-native": "^0.2.0"
   }
