--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "compile": "tsc -p tsconfig.json --pretty",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lc": "yarn lint --fix && yarn compile",
-    "nuke": "rm -rf node_modules"
+    "nuke": "rm -rf node_modules",
+    "postinstall": "npx vscode-project-react-native"
   },
   "dependencies": {
     "expo": "~40.0.0",
@@ -20,7 +21,6 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.14.0",
     "eslint-config-react-native-bk": "^0.1.0",
-    "typescript": "~4.0.0",
-    "vscode-project-react-native": "^0.2.0"
+    "typescript": "~4.0.0"
   }
 }
